devops/kubernetes/service-solution.yml
apiVersion: v1
kind: Service
metadata:
  name: <solution-name>
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
  selector:
    app: <solution-name>
